# TelegramAgents

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/agents/: base.py  registry.py
backend/app/agents/bookstore/: agent.py  book_lookup.py  prompts.py
backend/app/agents/video_shorts/: agent.py  jobs.py  prompts.py  video_utils.py
backend/app/api/: agents.py  auth.py  bookstore.py  deps.py  logs.py  settings.py  video_shorts.py
backend/app/integrations/: anthropic_client.py  whisper_client.py
backend/app/models/: __init__.py  agent.py  agent_user.py  bookstore.py  llm_connection.py  message_log.py  platform_settings.py  user.py  video_job.py
backend/app/schemas/: agent.py  auth.py  bookstore.py  video_shorts.py
backend/app/services/: telegram_bot_manager.py
backend/app/worker/: main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: agents.ts  auth.ts  bookstore.ts  settings.ts  videoShorts.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AgentDetailPage.tsx  AgentsListPage.tsx  DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/styles/: global.css
scripts/: backup.sh
